# kagakugijutu-scratch-update-1

./: .replit  .run.sh.swp  README.md  get.sh  main.py  pyproject.toml  test1.js
.github/workflows/: gas2git.yml
data/: pyvenv.cfg
docs/: grade.js
raspi/: pyvenv.cfg
repilt/: pyvenv.cfg
